--- a/html/index.html
+++ b/html/index.html
@@ -55,7 +55,7 @@
                 <div class="header__btns">
                     <button class="header__login">Log in</button>
                     <a class="header__signup" href="./signUp.html">Sign up</a>
-                    <a href="./premium_class.html" class="header__space-btn">Premium classes</a>
+                    <a href="../premium_class.html" class="header__space-btn">Premium classes</a>
                 </div>
             </div>
         </div>
@@ -88,7 +88,7 @@
           </p>
           <ul class="reimagine__menu-boxes">
             <li class="reimagine__list-box">
-              <img src="/assets/coding men.png" alt="" class="reimange__img" />
+              <img src="../assets/coding men.png" alt="" class="reimange__img" />
               <div class="reim__listbox-bottom">
                 <h3 class="reim__listbox-title">Full Stack Web Developer</h3>
                 <p class="reim__listbox-text">
@@ -102,7 +102,7 @@
               </div>
             </li>
             <li class="reimagine__list-box">
-              <img src="/assets/coding lasy.png" alt="" class="reimange__img" />
+              <img src="../assets/coding lasy.png" alt="" class="reimange__img" />
               <div class="reim__listbox-bottom">
                 <h3 class="reim__listbox-title">Digital Marketer</h3>
                 <p class="reim__listbox-text">
@@ -116,7 +116,7 @@
               </div>
             </li>
             <li class="reimagine__list-box">
-              <img src="/assets/coding boy.png" alt="" class="reimange__img" />
+              <img src="../assets/coding boy.png" alt="" class="reimange__img" />
               <div class="reim__listbox-bottom">
                 <h3 class="reim__listbox-title">Data Scientist</h3>
                 <p class="reim__listbox-text">
@@ -146,7 +146,7 @@
           <ul class="lessons_main_wrapper">
             <li class="lessons__main_box">
               <img
-                src="/assets/colorful brother.png"
+                src="../assets/colorful brother.png"
                 alt=""
                 class="lessons__img"
               />
@@ -171,7 +171,7 @@
               <button class="lessons__btn">Bestseller</button>
             </li>
             <li class="lessons__main_box">
-              <img src="/assets/c-- man.png" alt="" class="lessons__img" />
+              <img src="../assets/c-- man.png" alt="" class="lessons__img" />
               <h4 class="lessons__main-title">
                 C++ Data Structures & Algorithms + LEETCODE
               </h4>
@@ -193,7 +193,7 @@
               <button class="lessons__btn">Bestseller</button>
             </li>
             <li class="lessons__main_box">
-              <img src="/assets/js.png" alt="" class="lessons__img" />
+              <img src="../assets/js.png" alt="" class="lessons__img" />
               <h4 class="lessons__main-title">
                 JavaScript Algorithms and Data Structures Masterclass
               </h4>
@@ -215,7 +215,7 @@
               <button class="lessons__btn">Bestseller</button>
             </li>
             <li class="lessons__main_box">
-              <img src="/assets/python.png" alt="" class="lessons__img" />
+              <img src="../assets/python.png" alt="" class="lessons__img" />
               <h4 class="lessons__main-title">
                 Java Data Structures and Algorithms Masterclass
               </h4>
@@ -238,7 +238,7 @@
             </li>
             <li class="lessons__main_box">
               <img
-                src="/assets/indian green man.png    "
+                src="../assets/indian green man.png    "
                 alt=""
                 class="lessons__img"
               />
@@ -272,29 +272,29 @@
             </h3>
             <div class="companies__logos">
               <a href="#" class="comapanies__link">
-                <img src="/assets/BYD.png" alt="" class="comapanies__img" />
+                <img src="../assets/BYD.png" alt="" class="comapanies__img" />
               </a>
               <a href="#" class="comapanies__link">
-                <img src="/assets/samsung.png" alt="" class="comapanies__img" />
+                <img src="../assets/samsung.png" alt="" class="comapanies__img" />
               </a>
               <a href="#" class="comapanies__link">
-                <img src="/assets/cisci.png" alt="" class="comapanies__img" />
+                <img src="../assets/cisci.png" alt="" class="comapanies__img" />
               </a>
               <a href="#" class="comapanies__link">
-                <img src="/assets/vimeo.png" alt="" class="comapanies__img" />
+                <img src="../assets/vimeo.png" alt="" class="comapanies__img" />
               </a>
               <a href="#" class="comapanies__link">
-                <img src="/assets/P&G.png" alt="" class="comapanies__img" />
+                <img src="../assets/P&G.png" alt="" class="comapanies__img" />
               </a>
               <a href="#" class="comapanies__link">
-                <img src="/assets/hewlet.png" alt="" class="comapanies__img" />
+                <img src="../assets/hewlet.png" alt="" class="comapanies__img" />
               </a>
               <a href="#" class="comapanies__link">
-                <img src="/assets/citi.png" alt="" class="comapanies__img" />
+                <img src="../assets/citi.png" alt="" class="comapanies__img" />
               </a>
               <a href="#" class="comapanies__link">
                 <img
-                  src="/assets/erikson.png "
+                  src="../assets/erikson.png "
                   alt=""
                   class="comapanies__img"
                 />
@@ -311,7 +311,7 @@
               <div class="focus-wrapper">
                 <div class="focus-item">
                   <img
-                    src="/assets/Image [features-tab_icon__2eVep].svg"
+                    src="../assets/Image [features-tab_icon__2eVep].svg"
                     alt=""
                     class="focus-item-icon"
                   />
@@ -326,7 +326,7 @@
 
                 <div class="focus-item">
                   <img
-                    src="/assets/Image [features-tab_icon__2eVep] (3).svg"
+                    src="../assets/Image [features-tab_icon__2eVep] (3).svg"
                     alt=""
                     class="focus-item-icon"
                   />
@@ -342,7 +342,7 @@
 
                 <div class="focus-item">
                   <img
-                    src="/assets/Image [features-tab_icon__2eVep] (1).svg"
+                    src="../assets/Image [features-tab_icon__2eVep] (1).svg"
                     alt=""
                     class="focus-item-icon"
                   />
@@ -358,7 +358,7 @@
 
                 <div class="focus-item">
                   <img
-                    src="/assets/Image [features-tab_icon__2eVep] (2).svg"
+                    src="../assets/Image [features-tab_icon__2eVep] (2).svg"
                     alt=""
                     class="focus-item-icon"
                   />
@@ -374,7 +374,7 @@
               </div>
             </div>
             <div class="focus-right">
-              <img src="/assets/Image.svg" alt="" class="focus-right-img" />
+              <img src="../assets/Image.svg" alt="" class="focus-right-img" />
             </div>
           </div>
         </div>
@@ -506,7 +506,7 @@
                 <div class="overflow_wrapper">
                   <div class="card_wrapper">
                     <div class="card_content">
-                      <img src="/assets/Image (1).svg" alt="" />
+                      <img src="../assets/Image (1).svg" alt="" />
                       <p class="card_text">
                         Udemy was rated the
                         <span class="darker">
@@ -520,7 +520,7 @@
 
                       <div class="card_info">
                         <img
-                          src="/assets/Image (2).svg"
+                          src="../assets/Image (2).svg"
                           alt=""
                           class="card_img"
                         />
@@ -534,7 +534,7 @@
                 <div class="overflow_wrapper">
                   <div class="card_wrapper">
                     <div class="card_content">
-                      <img src="/assets/Image (1).svg" alt="" />
+                      <img src="../assets/Image (1).svg" alt="" />
                       <p class="card_text">
                         Udemy was truly
                         <span class="darker">
@@ -545,7 +545,7 @@
 
                       <div class="card_info-texts">
                         <img
-                          src="/assets/Image [ud-avatar].svg"
+                          src="../assets/Image [ud-avatar].svg"
                           alt=""
                           class="card_img"
                         />
@@ -563,7 +563,7 @@
                 <div class="overflow_wrapper">
                   <div class="card_wrapper">
                     <div class="card_content">
-                      <img src="/assets/Image (1).svg" alt="" />
+                      <img src="../assets/Image (1).svg" alt="" />
                       <p class="card_text">
                         Udemy gives you the ability to be persistent. I learned
                         exactly what I needed to know in the real world. It
@@ -573,7 +573,7 @@
 
                       <div class="card_info-texts">
                         <img
-                          src="/assets/Image [ud-avatar] (1).svg"
+                          src="../assets/Image [ud-avatar] (1).svg"
                           alt=""
                           class="card_img"
                         />
@@ -593,7 +593,7 @@
                 <div class="overflow_wrapper">
                   <div class="card_wrapper">
                     <div class="card_content">
-                      <img src="/assets/Image (1).svg" alt="" />
+                      <img src="../assets/Image (1).svg" alt="" />
                       <p class="card_text">
                         With Udemy Business employees were able to marry the two
                         together, technology and consultant soft skills... to
@@ -605,7 +605,7 @@
 
                       <div class="card_info-texts">
                         <img
-                          src="/assets/Image [ud-avatar] (2).svg"
+                          src="../assets/Image [ud-avatar] (2).svg"
                           alt=""
                           class="card_img"
                         />
@@ -644,7 +644,7 @@
               </p>
               <button class="ai_btn">Start Learning</button>
             </div>
-            <img src="/assets/Image (3).svg" alt="" class="ai_img" />
+            <img src="../assets/Image (3).svg" alt="" class="ai_img" />
           </div>
         </div>
       </section>
@@ -739,7 +739,7 @@
               </div>
               <div class="right">
                 <img
-                  src="/assets/Image [ub-case-study-slide_image-square__loJh8].png"
+                  src="../assets/Image [ub-case-study-slide_image-square__loJh8].png"
                   alt=""
                   class="booz-right-img"
                 />
@@ -770,11 +770,11 @@
             </div>
             <div class="footer__career-skill-logos">
               <a href="#" class="career-skill-link">
-                <img src="/assets/Nasdaq.png" alt="" class="career-skill-img" />
+                <img src="../assets/Nasdaq.png" alt="" class="career-skill-img" />
               </a>
               <a href="#" class="career-skill-link">
                 <img
-                  src="/assets/Volkswagen.png"
+                  src="../assets/Volkswagen.png"
                   alt=""
                   class="career-skill-img"
                 />
@@ -784,7 +784,7 @@
               </a>
               <a href="#" class="career-skill-link">
                 <img
-                  src="/assets/Eventbrite.png"
+                  src="../assets/Eventbrite.png"
                   alt=""
                   class="career-skill-img"
                 />
