--- a/html/profile.html
+++ b/html/profile.html
@@ -8,8 +8,8 @@
       rel="stylesheet"
       href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.13.1/font/bootstrap-icons.min.css"
     />
-    <link rel="shortcut icon" href="/assets/u.png" type="image/x-icon" />
-    <link rel="stylesheet" href="/css/style.css" />
+    <link rel="shortcut icon" href="../assets/u.png" type="image/x-icon" />
+    <link rel="stylesheet" href="../css/style.css" />
     <link
       rel="stylesheet"
       href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.13.1/font/bootstrap-icons.min.css"
@@ -61,7 +61,7 @@
             <li class="profile__icon-list">
               <a href="#" class="icon-link">
                 <img
-                  src="/assets/Link - My profile.png"
+                  src="../assets/Link - My profile.png"
                   alt=""
                   class="icon-menu-profile-pic"
                 />
@@ -118,7 +118,7 @@
             </div>
             <div class="profile_hero-image">
               <img
-                src="/assets/Jonas Schmedtmann.png"
+                src="../assets/Jonas Schmedtmann.png"
                 alt=""
                 class="profile__hero__main-img"
               />
@@ -147,7 +147,7 @@
           <div class="courses__projects">
             <div class="courses__project-box">
               <img
-                src="/assets/js bro.png"
+                src="../assets/js bro.png"
                 alt=""
                 class="courses__project-img"
               />
@@ -174,7 +174,7 @@
             </div>
             <div class="courses__project-box">
               <img
-                src="/assets/js bro.png"
+                src="../assets/js bro.png"
                 alt=""
                 class="courses__project-img"
               />
@@ -203,7 +203,7 @@
             </div>
             <div class="courses__project-box">
               <img
-                src="/assets/js bro.png"
+                src="../assets/js bro.png"
                 alt=""
                 class="courses__project-img"
               />
@@ -232,7 +232,7 @@
             </div>
             <div class="courses__project-box">
               <img
-                src="/assets/js bro.png"
+                src="../assets/js bro.png"
                 alt=""
                 class="courses__project-img"
               />
@@ -264,7 +264,7 @@
             </div>
             <div class="courses__project-box">
               <img
-                src="/assets/js bro.png"
+                src="../assets/js bro.png"
                 alt=""
                 class="courses__project-img"
               />
@@ -296,7 +296,7 @@
             </div>
             <div class="courses__project-box">
               <img
-                src="/assets/js bro.png"
+                src="../assets/js bro.png"
                 alt=""
                 class="courses__project-img"
               />
@@ -349,21 +349,21 @@
             </div>
             <div class="footer__career-skill-logos">
               <a href="#" class="career-skill-link">
-                <img src="/assets/Nasdaq.png" alt="" class="career-skill-img" />
+                <img src="../assets/Nasdaq.png" alt="" class="career-skill-img" />
               </a>
               <a href="#" class="career-skill-link">
                 <img
-                  src="/assets/Volkswagen.png"
+                  src="../assets/Volkswagen.png"
                   alt=""
                   class="career-skill-img"
                 />
               </a>
               <a href="#" class="career-skill-link">
-                <img src="/assets/NetApp.png" alt="" class="career-skill-img" />
+                <img src="../assets/NetApp.png" alt="" class="career-skill-img" />
               </a>
               <a href="#" class="career-skill-link">
                 <img
-                  src="/assets/Eventbrite.png"
+                  src="../assets/Eventbrite.png"
                   alt=""
                   class="career-skill-img"
                 />
@@ -554,8 +554,8 @@
       </div>
     </footer>
   </body>
-  <script src="/js/course.js"></script>
-  <script src="/js/input.js"></script>
-  <script src="/js/index.js"></script>
+  <script src="../js/course.js"></script>
+  <script src="../js/input.js"></script>
+  <script src="../js/index.js"></script>
   <script src="../js/signUp.js"></script>
 </html>
